--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "private": true,
 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js --watch server"
+  },
+
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
-
-
 
 }
